--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -1364,7 +1364,7 @@
                 'q': command,
                 'access_token': 'QDY6TXTZUGM7QXCHYRMVTZS756ULBIC2'
             },
-            dataType: 'jsonp',
+            dataType: 'json',
             method: 'POST'
         });
         return promise;
