Commit #175: Make the command interpretation method back to native

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -1306,7 +1306,7 @@
         Wakeup: { value:'Wakeup'},
     };
 
-    var currentCommandInterpretationMethod = COMMAND_INTERPRETATION_METHOD.WitApi;
+    var currentCommandInterpretationMethod = COMMAND_INTERPRETATION_METHOD.Native;
 
     var interpretCommand = function (command, agentContext) {
 
