Commit #176: Add ideas.html

--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -59,6 +59,9 @@
                 <li class="active">
                     <a href="/dashboard"><span class="glyphicon glyphicon-home"></span> Dashboard</a>
                 </li>
+                <li class="active">
+                    <a href="/ideas"><span class="glyphicon glyphicon-home"></span> Ideas</a>
+                </li>
             </ul>
         </div>
     </nav>
