Commit #178: Add CSS + HTML for Idea Container, Idea Row and Idea Main Container

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -3,6 +3,17 @@
 
 {% block content %}
 
+<style>
+	.idea-container {
+		height: 222px;
+		width: 293px;
+		border: 2px solid blue;
+		margin: 12px;
+		position: relative;
+		float: left;
+	}
+</style>
+
 <div class="container">
 	<hr>
 	<div class="row">
@@ -12,4 +23,13 @@
 		</div>
 	</div> <!-- row -->
 </div>
+<div class="container">
+	<div class="idea-main-container">
+		<div class="idea-row">
+			<div class="idea-container">
+			</div>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
