Commit #180: Fix Issues with Header Text Alignment

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -6,7 +6,7 @@
 <style>
 	.idea-container {
 		height: 222px;
-		width: 293px;
+		width: 300px;
 		border: 2px solid grey;
 		margin: 12px;
 		position: relative;
@@ -15,17 +15,19 @@
 
 		.idea-container .idea-header .idea-icon {
 			float: left;
-			margin: 10px;
+            margin: 10px 5px;
 		}
 
-			.idea-container .idea-header .idea-icon img {
-			}
+            .idea-container .idea-header .idea-icon img {
+                height: 45px;
+                width: 45px;
+            }
 
 		.idea-container .idea-header .idea-header-text {
 			float: left;
-			margin: 10px;
+			margin: 10px 5px;
 			/* Clip the Header Text Beyond 198px width */
-			width: 198px;
+			width: 231px;
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: clip;
@@ -59,6 +61,7 @@
 						<span>SABI</span>
 					</div>
 				</div>
+				<div class="idea-sub-header"></div>
 			</div>
 		</div>
 	</div>
