Commit #182: Add NIK Idea Entry

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -82,7 +82,24 @@
 					</div>
 				</div>
 				<div class="idea-sub-header">
-					<div class="idea-sub-header-text"></div>
+					<div class="idea-sub-header-text">
+						<span>The Global Conglomerate that controls the world</span>
+					</div>
+				</div>
+			</div>
+			<div class="idea-container">
+				<div class="idea-header">
+					<div class="idea-icon">
+						<img src="/static/activities/wake-up.png" />
+					</div>
+					<div class="idea-header-text">
+						<span title="SABI">NIK</span>
+					</div>
+				</div>
+				<div class="idea-sub-header">
+					<div class="idea-sub-header-text">
+						<span>Natural Intermediate Knowledge</span>
+					</div>
 				</div>
 			</div>
 		</div>
