Commit #183: Add Hover Over Color Effect on Icon Container

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -13,6 +13,13 @@
 		float: left;
 	}
 
+	idea-container:hover{
+		/* Display Pointer on Mouse Hover */
+		cursor: pointer;
+		/* Display Bluish Background Color */
+		background-color: rgba(153,50,204,.1);
+	}
+
 		.idea-container .idea-header .idea-icon {
 			float: left;
 			margin: 10px 5px;
@@ -31,8 +38,6 @@
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: clip;
-			/* Display Pointer on Mouse Hover */
-			cursor: pointer;
 		}
 
 			.idea-container .idea-header .idea-header-text span {
@@ -83,7 +88,7 @@
 				</div>
 				<div class="idea-sub-header">
 					<div class="idea-sub-header-text">
-						<span>The Global Conglomerate that controls the world</span>
+						<span title="The Global Conglomerate that controls the world">The Global Conglomerate that controls the world</span>
 					</div>
 				</div>
 			</div>
@@ -93,12 +98,12 @@
 						<img src="/static/activities/wake-up.png" />
 					</div>
 					<div class="idea-header-text">
-						<span title="SABI">NIK</span>
+						<span title="NIK">NIK</span>
 					</div>
 				</div>
 				<div class="idea-sub-header">
 					<div class="idea-sub-header-text">
-						<span>Natural Intermediate Knowledge</span>
+						<span title="Natural Intermediate Knowledge">Natural Intermediate Knowledge</span>
 					</div>
 				</div>
 			</div>
