--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -30,7 +30,7 @@
 
 			.idea-container .idea-header .idea-icon {
 				float: left;
-				margin: 10px 5px;
+				margin: 10px 5px 5px 5px;
 			}
 
 				.idea-container .idea-header .idea-icon img {
