Commit #186: Ensure Height is auto-adjusted as per elements in the Idea Container

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -5,7 +5,9 @@
 
 <style>
 	.idea-container {
-		height: 222px;
+		/* height: 222px; */
+		/* Ensure Height is auto-adjusted as per elements in the Idea Container */
+		height: auto;
 		width: 300px;
 		margin: 12px;
 		position: relative;
