Commit #187: Add height for the Idea Sub Header Container

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -56,6 +56,10 @@
 					font-family: Segoe UI Light;
 				}
 
+		.idea-container .idea-sub-header {
+			height: 60px;	
+		}
+	
 		.idea-container .idea-sub-header .idea-sub-header-text {
 			margin: 0px 5px;
 		}
