Commit #189: Add Click Handler for Idea Container

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -124,5 +124,14 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	/* Page load handler to initialize data */
+	$(document).ready(function () {
+		$(".idea-container").click(function (e) {
+        		alert("Idea Container Clicked!");    
+			alert(e);
+        	});
+	});
+</script>
 
 {% endblock %}
