--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -137,6 +137,9 @@
     				<p class="idea-modal-text"></p>
   			</div>
 		</div>
+		<div id="ideaModalDialog" title="Idea Details">
+			<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+		</div>
 	</div>
 </div>
 <script type="text/javascript">
@@ -153,6 +156,8 @@
 	    
 	/* Append the new Activity to the Canvas Tile Data */
         ideasCollection["1"] = sabiIdea;
+	
+	
 		
 	/* Page load handler to initialize data */
 	$(document).ready(function () {
@@ -165,10 +170,16 @@
 			if(currentIdea)
 			{
 				/* Update the Idea Modal Fields */
-				$(".idea-modal-text").text(currentIdea.ideaHeaderText);
+				//$(".idea-modal-text").text(currentIdea.ideaHeaderText);
+				
+				/* Update the fields of JQuery Modal Dialog */
+				//TODO
 				
 				/* Display the Modal Window */
-				$("#ideaModal").show();
+				//$("#ideaModal").show();
+				
+				/* Display JQuery UI based Modal Dialog */
+				$("#ideaModalDialog").dialog('open');
 			}
         	});
 		/* Click Handler for Modal Close Button */
@@ -176,6 +187,11 @@
 			/* Hide the Modal Window */
 			$("#ideaModal").hide();
 		});
+		
+		/* Create JQuery UI based Modal Dialog for Idea */
+		$("#ideaModalDialog").dialog({modal:true});
+		/* Keep the Dialog Closed by default */
+		$("#ideaModalDialog").dialog('close');
 	});
 </script>
 
