Commit #199: Add Description to Idea Modal Dialog

--- a/hello/templates/ideas.html
+++ b/hello/templates/ideas.html
@@ -167,6 +167,19 @@
 		/* Display Pointer on Mouse Hover */
     		cursor: pointer;
 	}
+	
+	.idea-modal-container .idea-description {
+		height: 90px;	
+	}
+	
+	.idea-modal-container .idea-description .label-container {
+		margin: 10px 5px 5px 5px;	
+	}
+	
+	.idea-modal-container .idea-description .description-container {
+		margin: 0px 5px;	
+	}
+		
 </style>
 
 <div class="container">
@@ -233,6 +246,14 @@
 					</div>
 					<div class="name-container">
 						<span title="Sachin Bhat">Sachin Bhat</span>
+					</div>
+				</div>
+				<div class="idea-description">
+					<div class="label-container">
+						<label>What's it about?</label>
+					</div>
+					<div class="description-container">
+						<span title="SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity.">SABI is a global conglomerate that would hold several companies and other conglomerates in it. It will exist for millenia and would take care of mother earth and humanity.</span>
 					</div>
 				</div>
 			</div>
